# cos-lib

./: HACKING.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: distributed-solutions-tests.yaml  pull-request.yaml
src/cosl/: __init__.py  common_rules.py  cos_tool.py  databag_model.py  grafana_dashboard.py  grouped_rules.py  helpers.py  juju_topology.py  loki.py  loki_logger.py  mandatory_relation_pairs.py  ops_utils.py  otlp.py  prometheus.py  reconciler.py  rules.py  self_monitoring.py  statuses.py  time_validation.py  types.py  utils.py
src/cosl/backends/: __init__.py  grouped_rules.py  loki.py  prometheus.py
src/cosl/coordinated_workers/: coordinator.py  interface.py  nginx.py  worker.py  worker_config.py
src/cosl/coordinator/: cluster_provider.py  coordinator_charm_base.py  nginx.py
src/cosl/distributed/: cluster.py  coordinator.py  nginx.py  worker.py
src/cosl/interfaces/: cluster.py  datasource_exchange.py  utils.py
src/cosl/interfaces/cri_schemas/: README.md  __init__.py  update.py
src/cosl/interfaces/cri_schemas/grafana_datasource_exchange/v0/: __init__.py  schema.py
tests/: helpers.py  test_backend.py  test_compression.py  test_coordinator.py  test_coordinator_charm_base.py  test_cos_tool_logql.py  test_cos_tool_promql.py  test_datasource_exchange.py  test_generic_rules.py  test_get_disk_status.py  test_grafana_dashboard.py  test_juju_topology.py  test_loki_logger.py  test_mandatory_relation_pairs.py  test_myrules_promql.py  test_ops_utils.py  test_rules_path_validation.py  test_rules_promql.py  test_time_validation.py  test_type_convert_stored.py
tests/test_coordinated_workers/: conftest.py  test_coordinator.py  test_coordinator_status.py  test_nginx.py  test_roles_config.py  test_worker.py  test_worker_status.py
tests/test_coordinated_workers/resources/: sample_mimir_nginx_conf_tls.txt
tests/test_reconciler/: test_completeness.py  test_observe.py  utils.py
