[build-system]
requires = ["hatchling", "PyYAML", "typing-extensions"]
build-backend = "hatchling.build"

[project]
name = "cosl"
version = "0.0.10"
authors = [
  { name="sed-i", email="82407168+sed-i@users.noreply.github.com" },
]
description = "Utils for COS Lite charms"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "ops",
  "pydantic",
  "PyYAML",
  "typing-extensions"
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
]

[project.urls]
"Homepage" = "https://github.com/canonical/cos-lib"
"Bug Tracker" = "https://github.com/canonical/cos-lib/issues"

[package]
include = ["py.typed"]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.pyright]
include = ["src"]
extraPaths = ["lib", "src/cosl"]
pythonPlatform = "All"
typeCheckingMode = "strict"
reportIncompatibleMethodOverride = false
reportImportCycles = false
reportTypeCommentUsage = false

[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "R", "D", "I001"]
# Ignore E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["E501", "D107", "RET504", "C901"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103"]}

[tool.ruff.lint.pydocstyle]
convention = "google"

# Static analysis tools configuration
[tool.mypy]
pretty = true
python_version = 3.8
follow_imports = "normal"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
show_traceback = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
allow_redefinition = true
no_implicit_optional = false

[tool.codespell]
skip = ".git,.tox,build,lib,venv*,.mypy_cache"
ignore-words-list = "assertIn"
